# Cynan

./: .gitignore  CODE_MANIFEST.sha256  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPLY_CHAIN_INTEGRITY.md  build.rs
.github/workflows/: docker-publish.yml
benches/: pqc_benchmarks.rs  sip_throughput.rs
charts/cynan-ims/: Chart.yaml  values.yaml
charts/cynan-ims/templates/: _helpers.tpl  deployment.yaml  service.yaml
config/: cynan.yaml
docs/: COMPETITIVE_ANALYSIS.md  DEVELOPMENT_BEST_PRACTICES.md  DEVELOPMENT_ROADMAP.md  PQC_ARCHITECTURE.md  PQC_MIGRATION_GUIDE.md  PQC_PERFORMANCE_ANALYSIS.md  PQC_TROUBLESHOOTING.md  SBC_CONNECTIVITY_GUIDE.md  pqc_security_audit.md
migrations/: 001_initial_schema.sql  002_add_pqc_keys.sql
proto/: cups.proto  media_engine.proto
scripts/: install.sh  verify_integrity.sh
src/: as_integration.rs  bgcf.rs  config.rs  diameter.rs  grpc_tls.rs  ibcf.rs  integration.rs  integration_helpers.rs  main.rs  metrics.rs  mgcf.rs  pqc_primitives.rs  rtp_router.rs  sbc_integration.rs  sip_arcrtc.rs  slf.rs  tls_config.rs
src/core/: engine.rs  mod.rs  routing.rs  sip_utils.rs  transport.rs
src/cynan_o_ran/: mod.rs
src/modules/: auth.rs  ims.rs  ipsec.rs  mod.rs  traits.rs
src/state/: db.rs  mod.rs
src/user_plane/: mod.rs
tests/: charging_test.rs  cups_test.rs  diameter_pqc_test.rs  integration_test.rs  monitoring_test.rs  o2_interface_test.rs  pqc_grpc_integration_test.rs  pqc_ibcf_test.rs  pqc_ipsec_negotiation_test.rs  pqc_sip_auth_test.rs  pqc_tls_test.rs  test_import.rs
