[package]
name = "cynan"
version = "0.7.0"
edition = "2021"
authors = ["Fastcomcorp, LLC"]
description = "Development version of comprehensive IMS core with Armoricore integration, Diameter HSS interfaces, RTP packet routing, TLS certificates, BGCF/MGCF PSTN interconnect, IBCF inter-operator security, SLF multi-HSS support, and Application Server integration - NOT FOR PRODUCTION USE"
license = "Proprietary"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
rsip = "0.4"
diameter = { version = "0.6", default-features = false }
tokio-rustls = "0.24"
tonic = { version = "0.9", features = ["transport", "tls", "tls-roots"] }
tonic-build = { version = "0.9", optional = true }
dashmap = "5.5"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rhai = "1.13"
clap = { version = "4.2", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
once_cell = "1.20"
async-trait = "0.1"
bytes = "1.4"
uuid = { version = "1.5", features = ["v4"] }
futures = "0.3"
# nats = "0.23"  # Temporarily disabled due to dependency conflicts
ring = "0.17"
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rustls-pemfile = "1.0"
tempfile = "3.8"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
rcgen = "0.11"
time = { version = "0.3", features = ["serde"] }

[[bench]]
name = "sip_throughput"
harness = false
