[package]
name = "cynan"
version = "0.8.5"
edition = "2021"
authors = ["Fastcomcorp, LLC"]
description = "Development version of comprehensive IMS core with Armoricore integration, Diameter HSS interfaces, RTP packet routing, TLS certificates, BGCF/MGCF PSTN interconnect, IBCF inter-operator security, SLF multi-HSS support, Application Server integration, and Gm IPsec - NOT FOR PRODUCTION USE"
license = "Apache 2.0"

[lib]
name = "cynan"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
rsip = "0.4"
diameter = { version = "0.6", default-features = false }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["aws-lc-rs", "logging", "std", "tls12"] }
tonic = { version = "0.12.3", features = ["transport", "tls", "tls-roots"] }
tonic-build = "0.12.3"
prost = "0.13"
dashmap = "5.5"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rhai = "1.13"
clap = { version = "4.2", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
once_cell = "1.20"
async-trait = "0.1"
bytes = "1.4"
uuid = { version = "1.5", features = ["v4", "serde"] }
futures = "0.3"
async-nats = "0.33"
ring = "0.17"
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rustls-pemfile = "2.1"
tempfile = "3.8"
md5 = "0.7"
base64 = "0.22"
# Post-Quantum Cryptography (NIST FIPS Standards)
fips203 = "0.4"     # FIPS 203: ML-KEM (key encapsulation)
fips204 = "0.4"     # FIPS 204: ML-DSA (digital signatures)
fn-dsa = "0.2"      # NIST: FN-DSA (Falcon digital signatures)
zeroize = "1.7"     # Secure memory clearing for cryptographic keys
aws-lc-rs = "1.5"   # FIPS-validated PQC provider (SIP + gRPC TLS)
regex = "1.10"      # Pattern matching for AS integration
rcgen = "0.11"
time = { version = "0.3", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rustls-pki-types = "1.0"
# O-RAN O2 Interface (REST API)
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Phase 12: IPsec Integration (Linux Kernel XFRM)
netlink-sys = "0.8"
netlink-packet-route = "0.19"
netlink-packet-xfrm = "0.1"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "sip_throughput"
harness = false

[[bench]]
name = "pqc_benchmarks"
harness = false
